--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,5 +4,24 @@ ul{list-style: none;    display: flex;
     margin-left: 85%;
     /* vertical-align: middle; */}
 li:nth-child(1){padding-top: 4px;font-family: arial,sans-serif ;}
-#logo{background: url("../static/googlelogo_color_272x92dp.png") no-repeat;position: relative;height: 100px;
+#logo{background: url("../static/googlelogo_color_272x92dp.png") no-repeat;position: relative;height: 140px;
 background-position: center;}
+#form{text-align: center;}
+#search{border-radius: 20px;border: 1px solid #dad6d6;height: 45px;width: 550px;background:url("../static/outline_settings_voice_black_24dp.png") no-repeat
+510px 8px,url("../static/outline_search_black_24dp.png") no-repeat 8px 8px;}
+/*background-position: 510px 8px;/*background: url("../static/outline_search_black_24dp.png") no-repeat;*/
+#text{font-family: arial,sans-serif;font-size: small;}
+em {color:blue;}
+em:hover{text-decoration: underline;}
+#buttons input {    border: 1px solid #f8f9fa;
+    border-radius: 4px;
+    font-size: 14px;
+    font-family: arial,sans-serif;
+    background-color: #f8f9fa;
+    height: 35px;
+    width: 150px;
+    /* font-weight: 20; */
+    color: #3c4043;
+    line-height: 27px;
+    text-align: center;
+    cursor: pointer;}
